# crypto-binance-alert-platform

./: Cargo.toml  README.md
src/: main.rs  market_manager.rs
