[package]
name = "binance-receiver"
version = "0.1.0"
edition = "2024"

[dependencies]

# Async runtime
tokio = { version = "1", features = ["full"] }

# WebSocket client
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }# Async utilities
futures-util = "0.3"

# JSON parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Concurrent hashmap for price store
dashmap = "6.1.0"

# HTTP / REST API
axum = "0.8.8"

# URL parsing
url = "2"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.13", features = ["json"] }